# fitness-app

./: .gitignore  LICENSE  README.md
services/backend/: Dockerfile  Makefile  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 2024_04_15_1055-718391f3eb6c_initial_revision.py  2024_04_17_1246-5d0293388b45_initial_revision.py  2024_04_18_0459-6b493c820443_initial_revision_2.py  2024_04_18_1005-60d7701cf442_initial_revision.py
services/backend/src/: main.py
services/backend/src/api/: router.py
services/backend/src/api/routes/: auth.py  country.py  user.py
services/backend/src/api/routes/account/: forgot_password.py  me.py  (+2 more)
services/backend/src/core/: lifespan.py  logging.py  middleware.py
services/backend/src/core/settings/: database.py  email.py  environment.py  fastapi.py  networking.py  security.py  settings.py
services/backend/src/models/: __init__.py  account.py  address.py  country.py  user.py
services/backend/src/models/user/: domain.py  requests.py
services/backend/src/services/auth/: authenticate_user.py  bearer_token_with_cookies.py  passwords.py  register.py  token.py
services/backend/src/services/database/: database_session_manager.py
services/backend/src/services/domain/: account.py  user.py
services/backend/src/services/email/: email_sender.py
services/backend/tests/: conftest.py  test_main.py  test_orm_session.py
services/backend/tests/integration/database/: test_orm_session.py
services/backend/tests/migrations/: conftest.py  test_stairway.py
services/backend/tests/tests_utils/: db_utils.py
(+113 files in other folders)
